--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <li>포트폴리오 [게시판] : <a href="#"><del>[바로가기]</del></a></li>
                 <li>포트폴리오 [쇼핑몰|관리자] : <a href="#"><del>[바로가기]</del></a></li>
                 <li>포트폴리오 [쇼핑몰|손님] : <a href="#"><del>[바로가기]</del></a></li>
+                <li>포트폴리오 [비디오 대여점] : <a href="#"><del>[바로가기]</del></a></li>
                 <li>포트폴리오 [가계부] : <a href="http://rigizer.kro.kr/cash">[바로가기]</a></li>
             </ul>
         </div>
