portfolio.html 하이퍼링크 오타 수정

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="http://rigier.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.png);">
+							<a href="http://rigizer.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Cashbook</h3>
