employees 포트폴리오 링크 수정

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-4">
-							<a href="http://rigizer.iptime.org:8180/goodee/week-3/200916/index.jsp" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);">
+							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Employees</h3>
