<a> 태그에 새 창 띄우기 옵션 추가
<a> 태그에 새 창을 띄우는 target="_blank"와 보안 요소인 rel="noopener noreferrer" 옵션 추가

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-4">
-							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);">
+							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Employees</h3>
@@ -70,7 +70,7 @@
 							</a>
 						</div>
 						<div class="col-md-4">
-							<a href="http://rigizer.iptime.org:8180/mall/index.jsp" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall.png);">
+							<a href="http://rigizer.iptime.org:8180/mall/index.jsp" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Shopping Mall</h3>
@@ -79,7 +79,7 @@
 							</a>
 						</div>
 						<div class="col-md-4">
-							<a href="http://rigizer.iptime.org:8180/mall-admin" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall-admin.png);">
+							<a href="http://rigizer.iptime.org:8180/mall-admin" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall-admin.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Shopping Mall - Admin</h3>
@@ -88,7 +88,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/sakila.png);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/sakila.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Sakila</h3>
@@ -97,7 +97,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="http://rigizer.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.png);">
+							<a href="http://rigizer.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Cashbook</h3>
