portfolio.html에 python-flask를 이용한 방명록 페이지 추가

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 			<section class="ftco-section-2">
 				<div class="photograhy">
 					<div class="row no-gutters">
-						<div class="col-md-4">
+						<div class="col-md-6">
 							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -69,7 +69,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-6">
 							<a href="http://rigizer.iptime.org:8180/mall/index.jsp" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -78,7 +78,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-6">
 							<a href="http://rigizer.iptime.org:8180/mall-admin" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall-admin.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -102,6 +102,15 @@
 								<div class="text text-center">
 									<h3>Cashbook</h3>
 									<span>Spring/MyBatis를 이용한 가계부</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="http://rigizer.kro.kr:8888/" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/flask.png);" target="_blank" rel="noopener noreferrer">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Message List</h3>
+									<span>Python/Flask를 이용한 방명록</span>
 								</div>
 							</a>
 						</div>
