sakila 하이퍼링크 추가

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/sakila.png);" target="_blank" rel="noopener noreferrer">
+							<a href="http://rigizer.kro.kr/sakila/auth/IndexServlet" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/sakila.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Sakila</h3>
@@ -106,7 +106,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="http://rigizer.kro.kr:8880/" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/flask.png);" target="_blank" rel="noopener noreferrer">
+							<a href="http://rigizer.kro.kr:8080/" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/flask.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Message List</h3>
