포트폴리오 목록 추가 (팀 프로젝트, 미니프로젝트)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -46,8 +46,8 @@
 			font-family: 'Nanum Pen Script', cursive;
 		}
 
-		.sunflower{
-			font-family: 'Sunflower', sans-serif;
+		.poorstory{
+			font-family: 'Poor Story', cursive;
 		}
 	</style>
   </head>
@@ -63,15 +63,14 @@
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="education.html">Education</a></li>
 					<li><a href="skill.html">Skill</a></li>
+					<li><a href="https://www.youtube.com/channel/UC7K8QkA2Y1IBEJGHm-3fNXw/videos" target="_blank">Youtube</a></li>
+					<li><a href="https://github.com/rigizer" target="_blank">Github</a></li>
 				</ul>
 			</nav>
 
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			  	Copyright &copy; 2020 All rights reserved<br>Jaeyong Han
-				<ul>
-					<li><a href="#"><i class="icon-github"></i></li>
-				</ul>
+			  	Copyright &copy; 2020-2021 All rights reserved<br>Jaeyong Han
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
@@ -83,7 +82,7 @@
 						<div class="desc">
 							<h2 class="subheading nanumpen">코드로 세상을 만들어갑니다</h2>
 							<h1 class="mb-4 dohyeon">한재용</h1>
-							<p class="mb-4 sunflower">1일 1코딩을 실천하며,<br>어떻게 하면 코드로 세상을 바꾸어나갈지 고민해가며<br>하루하루를 살아가는 한 청년입니다.</p>
+							<p class="mb-4 poorstory">1일 1코딩을 실천하며,<br>어떻게 하면 코드로 세상을 바꾸어나갈지 고민해가며<br>하루하루를 살아가는 한 청년입니다.</p>
 						</div>
 					</div>
 				</div>
