--- a/portfolio.html
+++ b/portfolio.html
@@ -45,15 +45,14 @@
 					<li class="colorlib-active"><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="education.html">Education</a></li>
 					<li><a href="skill.html">Skill</a></li>
+					<li><a href="https://www.youtube.com/channel/UC7K8QkA2Y1IBEJGHm-3fNXw/videos" target="_blank">Youtube</a></li>
+					<li><a href="https://github.com/rigizer" target="_blank">Github</a></li>
 				</ul>
 			</nav>
 
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			  	Copyright &copy; 2020 All rights reserved<br>Jaeyong Han
-				<ul>
-					<li><a href="#"><i class="icon-github"></i></li>
-				</ul>
+			  	Copyright &copy; 2020-2021 All rights reserved<br>Jaeyong Han
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
@@ -61,15 +60,24 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-6">
-							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);" target="_blank" rel="noopener noreferrer">
+							<a href="http://rigizer.kro.kr/lms" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/lmsproj.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Employees</h3>
-									<span>JSP를 이용한 게시판</span>
+									<h3>LMS</h3>
+									<span>Spring Boot 팀 프로젝트</span>
 								</div>
 							</a>
 						</div>
 						<div class="col-md-6">
+							<a href="http://rigizer.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.gif);" target="_blank" rel="noopener noreferrer">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Cashbook</h3>
+									<span>Spring/MyBatis를 이용한 가계부</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-4">
 							<a href="http://rigizer.iptime.org:8180/mall/index.jsp" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -78,7 +86,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-4">
 							<a href="http://rigizer.iptime.org:8180/mall-admin" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/mall-admin.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -87,7 +95,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-4">
 							<a href="http://rigizer.kro.kr/sakila/auth/IndexServlet" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/sakila.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
@@ -96,21 +104,30 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-6">
-							<a href="http://rigizer.kro.kr/cash" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/cashbook.png);" target="_blank" rel="noopener noreferrer">
+						<div class="col-md-4">
+							<a href="http://rigizer.kro.kr/employees" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/employees.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Cashbook</h3>
-									<span>Spring/MyBatis를 이용한 가계부</span>
+									<h3>Employees</h3>
+									<span>JSP를 이용한 게시판</span>
 								</div>
 							</a>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-4">
 							<a href="http://rigizer.kro.kr:8080/" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/flask.png);" target="_blank" rel="noopener noreferrer">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Message List</h3>
 									<span>Python/Flask를 이용한 방명록</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-4">
+							<a href="http://rigizer.kro.kr:3000/boardList" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/nodejs-board.png);" target="_blank" rel="noopener noreferrer">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>NodeJS-Board</h3>
+									<span>Javascript/node.js를 이용한 게시판</span>
 								</div>
 							</a>
 						</div>
