Education 페이지 추가

--- a/education.html
+++ b/education.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
-    <title>rigizer.github.io :: INDEX</title>
+    <title>rigizer.github.io :: EDUCATION</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
-	
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -31,25 +25,7 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
-	
-	<style>
-		.dohyeon {
-			font-family: 'Do Hyeon', sans-serif;
-		}
-
-		.notosanskr {
-			font-family: 'Noto Sans KR', sans-serif;
-		}
-
-		.nanumpen {
-			font-family: 'Nanum Pen Script', cursive;
-		}
-
-		.poorstory{
-			font-family: 'Poor Story', cursive;
-		}
-	</style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
@@ -59,9 +35,9 @@
 			<h1 id="colorlib-logo"><a href="index.html">rigizer</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li class="colorlib-active"><a href="index.html">Info</a></li>
+					<li><a href="index.html">Info</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="education.html">Education</a></li>
+					<li class="colorlib-active"><a href="education.html">Education</a></li>
 					<li><a href="skill.html">Skill</a></li>
 					<li><a href="https://www.youtube.com/channel/UC7K8QkA2Y1IBEJGHm-3fNXw/videos" target="_blank">Youtube</a></li>
 					<li><a href="https://github.com/rigizer" target="_blank">Github</a></li>
@@ -74,19 +50,59 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="js-fullheight d-flex justify-content-center align-items-center">
-					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/jyhan.png);"></div>
-						<div class="desc">
-							<h2 class="subheading nanumpen">코드로 세상을 만들어갑니다</h2>
-							<h1 class="mb-4 dohyeon">한재용</h1>
-							<p class="mb-4 poorstory">1일 1코딩을 실천하며,<br>어떻게 하면 코드로 세상을 바꾸어나갈지 고민해가며<br>하루하루를 살아가는 한 청년입니다.</p>
-						</div>
-					</div>
-				</div>
-			</div>
+			<section class="ftco-section">
+	    	<div class="container">
+	    		<div class="row">
+	    			<div class="col-lg-12">
+	    				<div class="row">
+	    					<div class="col-md-12">
+	    						<div class="blog-entry ftco-animate">
+	    							<a href="#" class="img" style="background-image: url(images/smulogo.png);"></a>
+	    							<div class="text pt-2 mt-3">
+										<span class="category mb-1 d-block"><a href="#">대학/4년제</a></span>
+										<h3 class="mb-4"><a href="#">세명대학교</a></h3>
+										<p class="mb-4">컴퓨터학부 소프트웨어학/컴퓨터시스템학</p>
+										<div class="mb-4">
+											<div class="info">
+												<span>기간</span>
+												<h3><span>2015.03-2021.02</span></h3>
+											</div>
+										</div>
+										<div class="meta-wrap d-md-flex align-items-center">
+											<div class="half">
+												<p><a href="http://www.semyung.ac.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3">홈페이지 이동</a></p>
+											</div>
+										</div>
+									</div>
+	    						</div>
+	    					</div>
+
+	    					<div class="col-md-12">
+	    						<div class="blog-entry ftco-animate">
+	    							<a href="#" class="img" style="background-image: url(images/gdlogo.png);"></a>
+	    							<div class="text pt-2 mt-3">
+										<span class="category mb-1 d-block"><a href="#">학원/국비지원</a></span>
+										<h3 class="mb-4"><a href="#">구디 아카데미</a></h3>
+										<p class="mb-4">자바 핀테크 개발자 양성과정</p>
+										<div class="mb-4">
+											<div class="info">
+												<span>기간</span>
+												<h3><span>2020.08-2021.02</span></h3>
+											</div>
+										</div>
+										<div class="meta-wrap d-md-flex align-items-center">
+											<div class="half">
+												<p><a href="http://www.gdu.co.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3">홈페이지 이동</a></p>
+											</div>
+										</div>
+									</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div><!-- END-->
+	    		</div><!-- END COL -->
+	    	</div>
+	    </section>
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
 
