--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			  	Copyright &copy; 2020-2021 All rights reserved<br>Jaeyong Han
+			  	Copyright &copy; 2020-<script>document.write(new Date().getFullYear());</script><br>All rights reserved<br>Jaeyong Han
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
