Education의 버튼을 누르면 새 창이 뜨도록 수정

--- a/education.html
+++ b/education.html
@@ -70,7 +70,7 @@
 										</div>
 										<div class="meta-wrap d-md-flex align-items-center">
 											<div class="half">
-												<p><a href="http://www.semyung.ac.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3">홈페이지 이동</a></p>
+												<p><a href="http://www.semyung.ac.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3" target="_blank">홈페이지 이동</a></p>
 											</div>
 										</div>
 									</div>
@@ -92,7 +92,7 @@
 										</div>
 										<div class="meta-wrap d-md-flex align-items-center">
 											<div class="half">
-												<p><a href="http://www.gdu.co.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3">홈페이지 이동</a></p>
+												<p><a href="http://www.gdu.co.kr/" class="btn btn-primary p-3 px-xl-4 py-xl-3" target="_blank">홈페이지 이동</a></p>
 											</div>
 										</div>
 									</div>
