포트폴리오 작업기간 추가

--- a/index.html
+++ b/index.html
@@ -247,8 +247,9 @@
 										</h4>
 										<h5>충청북도 제천시</h5>
 										<p class="description">
-											- 소프트웨어학<br>
-											- 컴퓨터시스템학
+											- C, C++, C#, Java, Python<br>
+											- Android, Computer Graphics<br>
+											- OS, Network
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -339,6 +340,14 @@
 								</tr>
 								<tr>
 									<td>
+										<b>작업 기간</b>
+									</td>
+									<td class="text-left">
+										2020.12.14 - 2021.01.12
+									</td>
+								</tr>
+								<tr>
+									<td>
 										<b>프로젝트 설명</b>
 									</td>
 									<td class="text-left">
@@ -400,6 +409,14 @@
 									</td>
 									<td class="text-left">
 										Java, HTML, SQL, JavaScript(jQuery)
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>작업 기간</b>
+									</td>
+									<td class="text-left">
+										2020.11.03 - 2020.11.18
 									</td>
 								</tr>
 								<tr>
@@ -478,6 +495,15 @@
 								</tr>
 								<tr>
 									<td>
+										<b>작업 기간</b>
+									</td>
+									<td class="text-left">
+										- 사용자: 2020.09.23 - 2020.09.29<br>
+										- 관리자: 2020.09.16 - 2020.09.22
+									</td>
+								</tr>
+								<tr>
+									<td>
 										<b>프로젝트 설명</b>
 									</td>
 									<td class="text-left">
@@ -552,6 +578,14 @@
 								</tr>
 								<tr>
 									<td>
+										<b>작업 기간</b>
+									</td>
+									<td class="text-left">
+										2020.10.19 - 2020.11.05
+									</td>
+								</tr>
+								<tr>
+									<td>
 										<b>프로젝트 설명</b>
 									</td>
 									<td class="text-left">
@@ -568,6 +602,77 @@
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/sakila')">Github</button>
 										&nbsp;&nbsp;
 										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/sakila/auth/IndexServlet')">Project</button>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<br><br>
+
+						<table class="table text-center">
+							<thead>
+								<tr>
+									<th colspan="2">직원 관리</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td colspan="2">
+										<a href="http://rigizer.kro.kr/employees" target="_blank">
+											<image src="assets/images/portfolio/employees.png" width="60%">
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td width="25%">
+										<b>프로젝트 방식</b>
+									</td>
+									<td width="75%" class="text-left">
+										JSP
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>사용 프로그램</b>
+									</td>
+									<td class="text-left">
+										Eclipse
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>언어</b>
+									</td>
+									<td class="text-left">
+										Java, HTML, SQL
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>작업 기간</b>
+									</td>
+									<td class="text-left">
+										2020.09.08 - 2020.09.15
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>프로젝트 설명</b>
+									</td>
+									<td class="text-left">
+										JSP 방식으로 만든 직원관리 페이지입니다.<br><br>
+										부서, 부서번호, 관리자, 직원, 급여, 직종에 대한 정보를 조회할 수 있습니다.<br><br>
+										또한, 키워드에 대한 검색이 가능합니다.
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<b>링크</b>
+									</td>
+									<td class="text-left">
+										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/employees')">Github</button>
+										&nbsp;&nbsp;
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/employees')">Project</button>
 									</td>
 								</tr>
 							</tbody>
