쇼핑몰 프로젝트 하이퍼링크 변경

--- a/index.html
+++ b/index.html
@@ -456,12 +456,12 @@
 										<table>
 											<tr>
 												<td>
-													<a href="http://rigizer.iptime.org:8180/mall/index.jsp" target="_blank">
+													<a href="http://rigizer.kro.kr/mall" target="_blank">
 														<image src="assets/images/portfolio/mall.png" width="75%">
 													</a>
 												</td>
 												<td>
-													<a href="http://rigizer.iptime.org:8180/mall-admin" target="_blank">
+													<a href="http://rigizer.kro.kr/mall-admin" target="_blank">
 														<image src="assets/images/portfolio/mall-admin.png" width="70%">
 													</a>
 												</td>
@@ -520,7 +520,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/mall')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org:8180/mall')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/mall')">Project</button>
 									</td>
 								</tr>
 								<tr>
@@ -530,7 +530,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/mall-admin')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org:8180/mall-admin')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/mall-admin')">Project</button>
 									</td>
 								</tr>
 							</tbody>
