최종 프로젝트 발표자료 추가 및 프로젝트 기간 주단위 표시

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 										<b>작업 기간</b>
 									</td>
 									<td class="text-left">
-										2020.12.14 - 2021.01.12
+										2020.12.14 - 2021.01.12 (6주)
 									</td>
 								</tr>
 								<tr>
@@ -364,6 +364,8 @@
 									</td>
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/goodee-project/LMS-X')">Github</button>
+										&nbsp;&nbsp;
+										<button class="btn btn-default" onclick="window.open('./LMS-X.pptx')">PPT</button>
 										&nbsp;&nbsp;
 										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/lms')">Project</button>
 									</td>
@@ -416,7 +418,7 @@
 										<b>작업 기간</b>
 									</td>
 									<td class="text-left">
-										2020.11.03 - 2020.11.18
+										2020.11.03 - 2020.11.18 (2주)
 									</td>
 								</tr>
 								<tr>
@@ -498,8 +500,8 @@
 										<b>작업 기간</b>
 									</td>
 									<td class="text-left">
-										- 사용자: 2020.09.23 - 2020.09.29<br>
-										- 관리자: 2020.09.16 - 2020.09.22
+										- 사용자: 2020.09.23 - 2020.09.29 (1주)<br>
+										- 관리자: 2020.09.16 - 2020.09.22 (1주)
 									</td>
 								</tr>
 								<tr>
@@ -581,7 +583,7 @@
 										<b>작업 기간</b>
 									</td>
 									<td class="text-left">
-										2020.10.19 - 2020.11.05
+										2020.10.19 - 2020.11.05 (2주)
 									</td>
 								</tr>
 								<tr>
@@ -652,7 +654,7 @@
 										<b>작업 기간</b>
 									</td>
 									<td class="text-left">
-										2020.09.08 - 2020.09.15
+										2020.09.08 - 2020.09.15 (1주)
 									</td>
 								</tr>
 								<tr>
