rigizer.kro.kr 도메인 만료, rigizer.iptime.org 도메인으로 변경

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 							<tbody>
 								<tr>
 									<td colspan="2">
-										<a href="http://rigizer.kro.kr/lms" target="_blank">
+										<a href="http://rigizer.iptime.org/lms" target="_blank">
 											<image src="assets/images/portfolio/lmsproj.png" width="75%"></image>
 										</a>
 									</td>
@@ -367,7 +367,7 @@
 										&nbsp;&nbsp;
 										<button class="btn btn-default" onclick="window.open('./LMS-X.pptx')">PPT</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/lms')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/lms')">Project</button>
 									</td>
 								</tr>
 							</tbody>
@@ -384,7 +384,7 @@
 							<tbody>
 								<tr>
 									<td colspan="2">
-										<a href="http://rigizer.kro.kr/cash" target="_blank">
+										<a href="http://rigizer.iptime.org/cash" target="_blank">
 											<image src="assets/images/portfolio/cashbook.gif" width="100%"></image>
 										</a>
 									</td>
@@ -438,7 +438,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/cash')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/cash')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/cash')">Project</button>
 									</td>
 								</tr>
 							</tbody>
@@ -458,12 +458,12 @@
 										<table>
 											<tr>
 												<td>
-													<a href="http://rigizer.kro.kr/mall" target="_blank">
+													<a href="http://rigizer.iptime.org/mall" target="_blank">
 														<image src="assets/images/portfolio/mall.png" width="75%">
 													</a>
 												</td>
 												<td>
-													<a href="http://rigizer.kro.kr/mall-admin" target="_blank">
+													<a href="http://rigizer.iptime.org/mall-admin" target="_blank">
 														<image src="assets/images/portfolio/mall-admin.png" width="70%">
 													</a>
 												</td>
@@ -522,7 +522,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/mall')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/mall')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/mall')">Project</button>
 									</td>
 								</tr>
 								<tr>
@@ -532,7 +532,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/mall-admin')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/mall-admin')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/mall-admin')">Project</button>
 									</td>
 								</tr>
 							</tbody>
@@ -549,7 +549,7 @@
 							<tbody>
 								<tr>
 									<td colspan="2">
-										<a href="http://rigizer.kro.kr/sakila/auth/IndexServlet" target="_blank">
+										<a href="http://rigizer.iptime.org/sakila/auth/IndexServlet" target="_blank">
 											<image src="assets/images/portfolio/sakila.png" width="60%">
 										</a>
 									</td>
@@ -603,7 +603,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/sakila')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/sakila/auth/IndexServlet')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/sakila/auth/IndexServlet')">Project</button>
 									</td>
 								</tr>
 							</tbody>
@@ -620,7 +620,7 @@
 							<tbody>
 								<tr>
 									<td colspan="2">
-										<a href="http://rigizer.kro.kr/employees" target="_blank">
+										<a href="http://rigizer.iptime.org/employees" target="_blank">
 											<image src="assets/images/portfolio/employees.png" width="60%">
 										</a>
 									</td>
@@ -674,7 +674,7 @@
 									<td class="text-left">
 										<button class="btn btn-default" onclick="window.open('https://github.com/rigizer/employees')">Github</button>
 										&nbsp;&nbsp;
-										<button class="btn btn-danger" onclick="window.open('http://rigizer.kro.kr/employees')">Project</button>
+										<button class="btn btn-danger" onclick="window.open('http://rigizer.iptime.org/employees')">Project</button>
 									</td>
 								</tr>
 							</tbody>
